# camos

./: .gitignore  LICENSE  README.md  readingCMOS.py  requirements.txt  resources.py  resources.qrc  setup.cfg  setup.py
camos/: __init__.py  __main__.py  _version.py  app.py
camos/gui/: __init__.py  about.py  framecontainer.py  helpers.py  mainwindow.py  notification.py  preferencespanel.py  settingswindow.py  settingswindow.xml  splash.py  styles.py
camos/gui/qt/: 02_custom.qss  qt_eliding_label.py  qt_range_slider.py
camos/model/: __init__.py  image.py  imageviewmodel.py  inputdata.py  signalviewmodel.py
camos/plotter/: __init__.py  event.py  heatmap.py  image.py  matplotlibwidget.py  plotter.py  raster.py  signal.py
camos/plugins/: __init__.py  extractsignal.py  findpeaks.py  generatemask.py  openimage.py  savesignal.py  savevideo.py
camos/plugins/binarizeevents/: __init__.py  binarizeevents.py
camos/plugins/binnedbursting/: binnedbursting.py
camos/plugins/burstclean/: burstclean.py
camos/plugins/clustering/: clustering.py
camos/plugins/cmos_crosscorrelation/: __init.py  __init__.py  cmos_crosscorrelation.py
camos/plugins/correlateposition/: correlateposition.py
camos/plugins/correlation/: correlation.py
camos/plugins/crosscorrelation/: __init__.py  crosscorrelation.py
camos/plugins/detectpeaks/: __init__.py  detectpeaks.py  oopsi.py  resources.qrc
camos/plugins/extractsignal/: __init__.py  extractsignal.py
camos/plugins/findpeaks/: __init__.py  findpeaks.py
camos/plugins/generatemask/: __init__.py  generatemask.py
camos/plugins/imageregistration/: imageregistration.py
camos/plugins/interspikeinterval/: __init__.py  heatmap.py  interspikeinterval.py
camos/plugins/interspikeintervalmask/: interspikeintervalmask.py
camos/plugins/meanfiringrate/: __init__.py  heatmap.py  meanfiringrate.py
camos/plugins/meanfiringratemask/: meanfiringratemask.py
camos/plugins/openbxr/: __init__.py  openbxr.py
camos/plugins/opencmos/: opencmos.py
camos/plugins/openimage/: __init__.py  openimage.py
camos/plugins/openimagestack/: __init__.py  openimagestack.py
camos/plugins/opensignal/: __init__.py  opensignal.py
camos/plugins/openview/: __init__.py  openview.py
camos/plugins/savecsv/: __init__.py  savecsv.py
camos/plugins/saveimage/: __init__.py  saveimage.py
camos/plugins/savesignal/: __init__.py  savesignal.py
camos/plugins/savevideo/: __init__.py  savevideo.py
camos/plugins/saveview/: __init__.py  saveview.py
camos/plugins/spikeinference/: __init__.py  spikeinference.py
camos/plugins/stackcorrelation/: __init__.py  stackcorrelation.py
camos/plugins/stackprojection/: __init__.py  stackprojection.py
camos/plugins/stackregistration/: __init__.py  stackregistration.py
camos/resources/: __init__.py  resources.py
camos/tasks/: __init__.py  analysis.py  base.py  opening.py  plotting.py  processing.py  runtask.py  saving.py
camos/utils/: __init__.py  apptools.py  cmaps.py  console.py  errormessages.py  generategui.py  notifications.py  pluginmanager.py  settings.py  strings.py  units.py
camos/viewport/: __init__.py  imageviewport.py  mpl_cmaps_in_ImageItem.py  signalviewer.py  signalviewer2.py  signalviewport.py  tableviewer.py
data/: mask.tif
