[metadata]
name = camos
url = https://camos.org
download_url = https://github.com/danilexn/CMS-TEA-DZNE
license = MIT
license_file = LICENSE.md
description = GUI for CMOS-MEA and Ca imaging analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = camos team
author_email = camos-team@googlegroups.com
classifiers =
    Development Status :: 1 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy>=1.16.5
    qtpy>=1.7.0
    tifffile>=2020.2.16
    vispy>=0.6.4
    multipagetiff>=2.0.3
    visbrain>=0.4.5
    pyqtgraph>=0.11.0rc0
    opencv-python>=4.5.1.48

[options.package_data]
* = *.pyi

[options.extras_require]
pyqt5 =
    PyQt5>=5.12.3,!=5.15.0
pyqt =  # alias for pyqt5
    %(pyqt5)s
qt =  # alias for pyqt5
    %(pyqt5)s
# all is the full "batteries included" extra.
all =
    scikit-image[data]
    %(pyqt5)s
testing =
    babel>=2.9.0
    pytest
    pytest-faulthandler
    pytest-order
    pytest-qt
    pytest-timeout
release =
    PyGithub>=1.44.1
    twine>=3.1.1
    pygithub
dev =
    pre-commit>=2.9.0
    black==20.8b1
    flake8==3.8.4
    check-manifest>=0.42
    %(all)s
    %(testing)s


[options.entry_points]
console_scripts =
    camos = camos.__main__:main