[metadata]
name = camos
url = https://camos.org
download_url = https://github.com/danilexn/CMS-TEA-DZNE
license = MIT
license_file = LICENSE.md
description = GUI for CMOS-MEA and Ca imaging analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = camos team
author_email = camos-team@googlegroups.com
classifiers =
    Development Status :: 1 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy>=1.16.5
    pyqt5>=5.15.2
    tifffile>=2020.2.16
    vispy>=0.6.4
    visbrain>=0.4.5
    pyqtgraph>=0.12.2
    opencv-python-headless>=4.5.1.48
    pyqt-darktheme>=1.2.3
    rtree>=0.9.4
    h5py>=2.10.0
    pystackreg>=0.2.5

[options.entry_points]
console_scripts =
    camos = camos.__main__:main
